srcMyCoreApp/main/default/objects/Mobile_Phone__c/Mobile_Phone__c.object-meta.xml
<CustomObject>
    <label>Mobile Phone</label>
    <nameField>
        <displayFormat>MBL-{0000}</displayFormat>
        <label>Mobile Phone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Phones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>