srcMyCoreApp/main/default/objects/Mobile_Phone__c/fields/Formula_for_Template__c.field-meta.xml
<CustomField>
    <fullName>Formula_for_Template__c</fullName>
    <formula>$Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula for Template</label>
    <type>Text</type>
</CustomField>