srcMyCoreApp/main/default/objects/Mobile_Phone__c/fields/Modal__c.field-meta.xml
<CustomField>
    <fullName>Modal__c</fullName>
    <label>Modal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>