srcMyCoreApp/main/default/objects/Mobile_Phone__c/fields/Test_Data_External_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Data_External_Field__c</fullName>
    <externalId>true</externalId>
    <label>Test Data External Field</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>