srcMyCoreApp/main/default/objects/Mobile_Phone__c/fields/Viswa_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Viswa_Test_Field__c</fullName>
    <label>Viswa Test Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>